[tool.poetry]
name = "weasyl"
version = "1.2.0"
description = ""
authors = []
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "20.1.0"
multipart = "0.2.4"
web-py = "0.51"
requests = "^2.31.0"
oauth2 = "1.9.0.post1"
pylibmc = "1.6.2"
pyramid = "2.0.2"
webtest = "3.0.0"
pyotp = "2.3.0"
qrcodegen = "1.2.0"
cryptography = "^41.0.6"
publicsuffixlist = "0.6.13"
alembic = "^1.11.1"
arrow = "1.2.2"
bcrypt = "4.0.1"
dogpile-cache = "1.2.0"
oauthlib = "2.1.0"
pillow = "10.0.1"
psycopg2cffi = "2.9.0"
sqlalchemy = "1.4.45"
lxml = "4.9.2"

# https://github.com/Weasyl/misaka
misaka = {url = "https://pypi.weasyl.dev/misaka/misaka-1.0.3%2Bweasyl.7.tar.gz"}

# https://github.com/Weasyl/sanpera
sanpera = {url = "https://pypi.weasyl.dev/sanpera/sanpera-0.2rc0%2Bweasyl.3.tar.gz"}

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
coverage = "7.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
