[project]
name = "weasyl"
version = "1.2.0"
description = ""
authors = []
license = "Apache-2.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "gunicorn==23.0.0",
    "multipart==0.2.4",
    "web-py==0.51",
    "requests[socks]~=2.32",
    "pylibmc==1.6.2",
    "pyramid==2.0.2",
    "pyotp==2.3.0",
    "qrcodegen==1.2.0",
    "cryptography~=44.0",
    "alembic~=1.17",
    "arrow==1.2.2",
    "bcrypt==4.0.1",
    "dogpile-cache==1.2.0",
    "pillow==10.3.0",
    "sqlalchemy[postgresql]==1.4.45",
    "lxml==4.9.2",
    "prometheus-client~=0.20.0",
    "ada-url~=1.23.0",
    "urllib3[socks]~=2.4.0",

    # https://github.com/Weasyl/misaka
    "misaka @ https://pypi.weasyl.dev/misaka/misaka-1.0.3%2Bweasyl.7.tar.gz",

    # https://github.com/Weasyl/sanpera
    "sanpera @ https://pypi.weasyl.dev/sanpera/sanpera-0.2rc0%2Bweasyl.3.tar.gz",
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
coverage = "7.13.1"
webtest = "^3.0.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
