[flake8]
; Rules we don’t really need:
;   E501: line too long
; SQLAlchemy:
;   E711: comparison to None should be ‘if cond is None:’
ignore = E501,E711

exclude = node_modules,weasyl-env,.git,static,libweasyl/libweasyl/alembic,libweasyl/docs,weasyl-apidocs

[tool:pytest]
addopts = -ra

; This is parsed/handled directly by wzl, and only indirectly by setup.py.
[metadata]
version = 1.1.4
